package boa.types;

import "shared.proto";

option optimize_for = SPEED;

message IssueRepository {
	enum IssueKind {
		UNKNOWN = 1;
		BUGS = 2;
		FEATURES = 3;
		SUPPORT = 4;
		PATCHES = 5;
	}
	required string url = 1;
	required IssueKind kind = 2;
	repeated Issue issues = 3;
}

message Issue {
	required string id = 1;
	required string status = 2;
	optional string component = 3;
	required string priority = 4;
	required string resolution = 5;
	repeated string duplicated_by = 6;
	optional string duplicate_of = 7;
	optional string subcomponent = 8;
	required string summary = 9;
	optional string version = 10;
	required int32 created_date = 11;
	required int32 modified_date = 12;
	optional int32 completed_date = 13;
	repeated string keywords = 14;
	required Person author = 15;
	required string description = 16;
	optional Person assignee = 17;
	optional string os = 18;
	optional string platform = 19;
	optional string milestone = 20;
	optional string depends_on = 21;
	optional string blocked = 22;
	optional int32 vote = 23;
	optional string secrecy = 24;
	repeated AttachedFile files = 25;
	repeated IssueComment comments = 26;
	repeated IssueChange changes = 27;
}

message AttachedFile {
	required string filename = 1;
	required string description = 2;
	required string url = 3;
	required int32 date = 4;
	required Person author = 5;
}

message IssueComment {
	required string id = 1;
	required int32 date = 2;
	required Person author = 3;
	required string description = 4;
}

message IssueChange {
	required string id = 1;
	required string what = 2;
	required int32 date = 3;
	required Person author = 4;
	required string old_value = 5;
	required string new_value = 6;
	optional string description = 7;
}
